package es.uah.matcomp.ed.lineales.lista.simple;

public class ElementoLS {
    private Object data ;

    public Object getData() {
        return data;
    }

    public void setData(Object data) {
        this.data = data;
    }
}
